<resources>
    <string name="app_name">Mobile_programming_HW2</string>
    <string name="mobile_programming_hw_app_2">Mobile Programming HW App 2</string>
    <string name="menu_btn">menu</string>
    <string name="menu1_option">Black BackGround</string>
    <string name="menu2_option">Green BackGround</string>
    <string name="info_input">개인 정보 입력</string>
    <string name="name">이름</string>
    <string name="phone_num">전화번호</string>
    <string name="location">거주 지역</string>
    <string name="email">이메일</string>
    <string name="seoul">서울</string>
    <string name="gyunggi">경기</string>
    <string name="gangwon">강원</string>
    <string name="choongchung">충청</string>
    <string name="gyungsang">경상</string>
    <string name="jeonla">전라</string>
    <string name="jeju">제주도</string>
    <string name="fin_vbtn">끝내기</string>
    <string name="cancle">취소</string>
    <string name="ok">확인</string>
    <string name="real_fin">종료하시겠습니까?</string>
    <string name="description_fin">프로그램을 종료합니다.</string>
    <string name="file_stream">File Stream</string>
    <string name="info_user">회원 정보</string>
    <string name="info_user_name">이름</string>
    <string name="info_user_loc">거주지</string>
    <string name="txt_view">학교</string>
    <string name="hint_info_name">이름을 입력하세요</string>
    <string name="hint_info_loc">거주지를 입력하세요</string>
    <string name="hint_user_school">학교를 입력하세요</string>
    <string name="write_file">파일 쓰기</string>
    <string name="read_file">파일 읽기</string>
    <string name="user_info">회원 정보</string>
    <string name="save">정보 저장</string>
    <string name="read_info">정보 읽기</string>
    <string name="sd_card">SD_Card</string>
    <string name="prev_img">이전그림</string>
    <string name="next_img">다음그림</string>
    <string name="graphic">Graphic</string>
    <string name="zoom_in">zoom in</string>
    <string name="zoom_out">zoom out</string>
    <string name="rotate">rotate</string>
    <string name="bright">bright</string>
    <string name="blur">blur</string>
    <string name="e">E</string>
    <string name="adapter">adapter</string>
    <string name="closet">closet</string>
    <string name="category">category</string>
    <string name="brand">brand</string>
    <string name="img">img</string>
</resources>